# openapi.yaml
@@ -6,16 +6,22 @@ info:
     title: Template API
     version: 0.0.1
 paths:
-    /template/create:
+    /template/{sid}/create:
         post:
             tags:
                 - Template
             operationId: Template_CreateTemplate
+            parameters:
+                - name: sid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/CreateTemplateRequest'
+                            $ref: '#/components/schemas/CreateTemplateRequestBody'
                 required: true
             responses:
                 "200":
@@ -30,15 +36,19 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /template/get/{name}:
+    /template/{sid}/query:
         get:
             tags:
                 - Template
-            operationId: Template_GetTemplate
+            operationId: Template_QueryTemplate
             parameters:
-                - name: name
+                - name: sid
                   in: path
                   required: true
+                  schema:
+                    type: string
+                - name: name
+                  in: query
                   schema:
                     type: string
             responses:
@@ -47,7 +57,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/GetTemplateReply'
+                                $ref: '#/components/schemas/QueryTemplateReply'
                 default:
                     description: Default error response
                     content:
@@ -61,15 +71,10 @@ components:
             properties:
                 message:
                     type: string
-        CreateTemplateRequest:
+        CreateTemplateRequestBody:
             type: object
             properties:
                 name:
-                    type: string
-        GetTemplateReply:
-            type: object
-            properties:
-                message:
                     type: string
         GoogleProtobufAny:
             type: object
@@ -79,6 +84,11 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        QueryTemplateReply:
+            type: object
+            properties:
+                message:
+                    type: string
         Status:
             type: object
             properties:
